# wxWidget-simpleApp

./: App.cpp  App.h  CMakeCache.txt  CMakeLists.txt  MainFrame.cpp  MainFrame.h
